更新aes加密