@@ -26,19 +26,19 @@ public class AESUtil {
     private static final String TRANSFORMATION = "AES/CBC/PKCS5Padding";
     public static final int blockSize = 64;
 
-    public static byte[] encryptToBytes(String plain_text, String key) {
-        if (plain_text == null || key == null) return null;
-        try {
-            Cipher cipher = Cipher.getInstance(TRANSFORMATION);
-            cipher.init(Cipher.ENCRYPT_MODE, new SecretKeySpec(key.getBytes(CHARSET), ALGORITHM));
-            return cipher.doFinal(plain_text.getBytes(CHARSET));
-            /*return new BASE64Encoder().encode(bytes);*/
-        } catch (NoSuchAlgorithmException | NoSuchPaddingException | BadPaddingException | IllegalBlockSizeException | InvalidKeyException | UnsupportedEncodingException e) {
-            e.printStackTrace();
-        }
-        return null;
-
-    }
+//    public static byte[] encryptToBytes(String plain_text, String key) {
+//        if (plain_text == null || key == null) return null;
+//        try {
+//            Cipher cipher = Cipher.getInstance(TRANSFORMATION);
+//            cipher.init(Cipher.ENCRYPT_MODE, new SecretKeySpec(key.getBytes(CHARSET), ALGORITHM));
+//            return cipher.doFinal(plain_text.getBytes(CHARSET));
+//            /*return new BASE64Encoder().encode(bytes);*/
+//        } catch (NoSuchAlgorithmException | NoSuchPaddingException | BadPaddingException | IllegalBlockSizeException | InvalidKeyException | UnsupportedEncodingException e) {
+//            e.printStackTrace();
+//        }
+//        return null;
+//
+//    }
 
     public static String encrypt(String plain_text, String key) {
         Cipher cipher = null;
@@ -75,20 +75,20 @@ public class AESUtil {
         return Base64.encodeToString(results, Base64.DEFAULT); // it returns the result as a String
     }
 
-    public static byte[] decryptToBytes(String cipherText, String key) {
-        if (cipherText == null || key == null) return null;
-        try {
-            Cipher cipher = Cipher.getInstance(TRANSFORMATION);
-            cipher.init(Cipher.DECRYPT_MODE, new SecretKeySpec(key.getBytes(CHARSET), ALGORITHM));
-            byte[] bytes = Base64.decode(cipherText, Base64.DEFAULT);
-            /*byte[] bytes = Base64.decode(cipherText);*/ //Base64方法
-            /*byte[] bytes = new BASE64Decoder().decodeBuffer(str);*/
-            return cipher.doFinal(bytes);
-        } catch (NoSuchAlgorithmException | InvalidKeyException | NoSuchPaddingException | BadPaddingException | IllegalBlockSizeException | UnsupportedEncodingException e) {
-            e.printStackTrace();
-        }
-        return null;
-    }
+//    public static byte[] decryptToBytes(String cipherText, String key) {
+//        if (cipherText == null || key == null) return null;
+//        try {
+//            Cipher cipher = Cipher.getInstance(TRANSFORMATION);
+//            cipher.init(Cipher.DECRYPT_MODE, new SecretKeySpec(key.getBytes(CHARSET), ALGORITHM));
+//            byte[] bytes = Base64.decode(cipherText, Base64.DEFAULT);
+//            /*byte[] bytes = Base64.decode(cipherText);*/ //Base64方法
+//            /*byte[] bytes = new BASE64Decoder().decodeBuffer(str);*/
+//            return cipher.doFinal(bytes);
+//        } catch (NoSuchAlgorithmException | InvalidKeyException | NoSuchPaddingException | BadPaddingException | IllegalBlockSizeException | UnsupportedEncodingException e) {
+//            e.printStackTrace();
+//        }
+//        return null;
+//    }
 
     public static String decrypt(String cipherText, String key) {
         Cipher cipher = null; //this parameters should not be changed
@@ -134,9 +134,9 @@ public class AESUtil {
     /**
      * 对文件进行加密
      *
-     * @param fis 传进来的文件
-     * @param key 密钥
-     * @return 返回
+     * @param fis          传进来的文件
+     * @param key          密钥
+     * @param outputStream 写出文件
      */
     public static void encryptFile(InputStream fis, OutputStream outputStream, String key) {
         Cipher cipher;
@@ -166,9 +166,9 @@ public class AESUtil {
     /**
      * 对文件进行解密
      *
-     * @param fis 传进来的文件，加密过的文件
-     * @param key 密钥
-     * @return 返回源文件
+     * @param fis          传进来的文件，加密过的文件
+     * @param key          密钥
+     * @param outputStream 写出文件
      */
     public static void decryptFile(InputStream fis, OutputStream outputStream, String key) {
         Cipher cipher;
@@ -202,6 +202,7 @@ public class AESUtil {
         byte[] encVal = cipher.doFinal(data);
         return encVal;
     }
+
     public static byte[] decryptByte(byte[] Data, String key) throws Exception {
         Cipher cipher;
         cipher = Cipher.getInstance(TRANSFORMATION);
